--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
-.b-colour1 {
+.bg-primary {
     background-color:
-        #e1fffd;
+        #e1fffd !important;
+}
+
+#logo {
+    max-height: 150px;
 }
