--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Oswald:wght@400;500&display=swap');
+
+.cool-letter {
+    font-family: 'Black Ops One', cursive;
+}
+
+.oswald {
+    font-family: 'Oswald', sans-serif;
+}
+
+
+
+
 .bg-primary {
     background-color:
         #e1fffd !important;
