--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,12 @@
 
 h1,
 h2,
-h3 .cool-letter {
-    font-family: 'Black Ops One', cursive;
-}
-
+h3,
 .cool-letter {
     font-family: 'Black Ops One', cursive;
 }
 
+p,
 .oswald {
     font-family: 'Oswald', sans-serif;
 }
