--- a/assets/images/css/style.css
+++ b/assets/images/css/style.css
@@ -32,3 +32,9 @@ p,
 .max-width {
     max-width: 600px
 }
+
+.nav-link:focus,
+.nav-link:hover {
+    color: var(--bs-nav-link-hover-color);
+    text-decoration: underline;
+}
